--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root {
+  --text-color: #363537;
+  --bg-color: #F5F5F5;
+}
+
+body {
+  background-color: var(--bg-color);
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -5,4 +14,17 @@
   box-sizing: border-box;
   outline: none;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+ul::-webkit-scrollbar {
+  width: 8px;               /* width of the entire scrollbar */
+}
+
+ul::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+ul::-webkit-scrollbar-thumb {
+  background-color: rgb(202, 202, 202);
+  border-radius: 20px;
 }
